--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyD0YT3u-r7R53h2rtPO0FYMM1rrv9Xbl4M",
-      authDomain: "ordem-ficha.firebaseapp.com",
-      projectId: "ordem-ficha",
-      storageBucket: "ordem-ficha.appspot.com",
-      messagingSenderId: "543944476352",
-      appId: "1:543944476352:web:56edc79e7af373b5354f25"
+        const firebaseConfig = {
+      apiKey: "AIzaSyBHCacLWZX_Peay_YJ5KYQYnDB51Jk85N0",
+      authDomain: "ficha-rpg-d6399.firebaseapp.com",
+      projectId: "ficha-rpg-d6399",
+      storageBucket: "ficha-rpg-d6399.appspot.com",
+      messagingSenderId: "532998218208",
+      appId: "1:532998218208:web:441e1d6ed8f3775e8fcb85"
     };
 
-    // Initialize Firebase
+        // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
 
